force-app/main/default/objects/Job_application__c/Job_application__c.object-meta.xml
<CustomObject>
    <label>Job application</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Job application</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>