force-app/main/default/objects/Job_application__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR interview</fullName>
            </value>
            <value>
                <fullName>English test</fullName>
            </value>
            <value>
                <fullName>Technical test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>